--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "papaparse": "^5.4.1",
+    "pinia": "^2.1.7",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
+    "vue3-cookies": "^1.0.6",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
+    "@types/papaparse": "^5.3.14",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vue/cli-plugin-babel": "~5.0.0",
